--- a/css/style.css
+++ b/css/style.css
@@ -286,9 +286,9 @@ padding-top: 24px;
 }
 .wrapp-progress p{
 font-size:14px;
-font-family: 'Lato', sans-serif;  
-color:#444444;  
-font-weight:bold;
+font-family: 'Lato', sans-serif;
+color:#444444;
+/*font-weight:bold;*/
 margin:0;
 padding:0;
 line-height:24px;
@@ -305,9 +305,10 @@ position:absolute;
 right: -25px;
 top: -30px;
 height: 24px;
-width: 50px;
+width: 90px;
 background: #1d1d1d;
 border-radius: 3px;
+
 font-family: 'VerelaRound';
 }
 .progress-bar i{
