--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ font-size:14px;
 
 /* =============================== header ===================================== */
 .header{
-background: url(../img/bghead.jpg) no-repeat center fixed;
+background: url(../img/portfolio/bghead.jpg) no-repeat center fixed;
     -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
@@ -73,7 +73,7 @@ top:0;
 left:0;
 width:100%;
 height:100%;
-background: url(../img/pattern.png);
+background: url(../img/portfolio/pattern.png);
 }
 
 #flex-head h1{
